--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "libsnark"]
 	path = libsnark
-	url = https://github.com/scipr-lab/libsnark.git
+	url = https://github.com/iamzhanghaohui/libsnark.git
